deploy/k8s.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stoiko
spec:
  replicas: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: stoiko
    spec:
      containers:
      - name: stoiko
        image: nginx:alpine
        imagePullPolicy: Always
        command: ["/bin/sh", "-c"]
        args:
          - "wget https://raw.githubusercontent.com/plamend/StaticPage/master/deploy/nginx_gcs_proxy.conf -O /etc/nginx/nginx_gcs_proxy.conf && \
            wget https://raw.githubusercontent.com/plamend/StaticPage/master/deploy/nginx.conf -O /etc/nginx/conf.d/default.conf && \
            nginx -g 'daemon off;'"
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "30Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: stoiko
  labels:
    app: stoiko
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: stoiko
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stoiko
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: stoiko.wtfitio.net
    http:
      paths:
      - backend:
          serviceName: stoiko
          servicePort: 80
        path: /
  - host: www.stoiko.wtfitio.net
    http:
      paths:
      - backend:
          serviceName: stoiko
          servicePort: 80
        path: /
